--- a/development/source-code/package.json
+++ b/development/source-code/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-froala": "^2.3.4",
+    "angular-ui-bootstrap": "^2.3.0",
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
     "bootstrap-social": "^5.0.0",
