--- a/development/source-code/package.json
+++ b/development/source-code/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
     "bootstrap-social": "^5.0.0",
+    "chart.js": "^2.4.0",
     "font-awesome": "^4.6.3",
     "froala-editor": "^2.3.4",
     "jquery": "^3.1.0",
